--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="index2.css">
 </head>
 <body>
-    <p>This is App</p>
-    <button >SUBMIT</button>
+    <p>This is App New</p>
+    <button > NEW SUBMIT</button>
 </body>
 </html>
 <!-- 
